--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,98 @@
-h1{
-    font-size: 30px;
-}
+body {
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+  }
+  
+  .navbar {
+    display: flex;
+    background-color: #1c2958;
+    padding: 10px;
+  }
+  
+  .dropdown {
+    position: relative;
+    display: inline-block;
+    margin-right: 20px;
+  }
+  
+  .dropbtn {
+    background-color: #1c2958;
+    ;
+    color: white;
+    padding: 10px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+  }
+  
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: white;
+    height: 80vh;
+    width: 300px;
+    box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+    margin-top: 10px;
+  }
+  
+  .nested-dropdown {
+    position: relative;
+  }
+  
+  .nested-dropbtn {
+    background-color: #ffffff;
+    color: rgb(0, 0, 0);
+    padding: 10px;
+    width: 100%;
+    text-align: left;
+    border: none;
+    cursor: pointer;
+    font-size: 16px;
+    padding: 20px;
+  }
+  
+  .nested-dropdown-content {
+    display: none;
+    position: absolute;
+    left: 100%;
+    /* Open to the right */
+    top: 0;
+    background-color: white;
+    width: 350px;
+    max-height: 300px;
+    /* Set a max height for scrolling */
+    overflow-y: auto;
+    /* Enable vertical scrolling */
+    box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+    padding-left: 50px;
+  }
+  
+  .nested-dropdown-content h2 {
+    font-size: 17px;
+    text-align: center;
+    margin-left: -40px;
+    padding-right: 20%;
+  
+  }
+  
+  .nested-dropdown-content hr {
+    margin-left: -90px;
+  }
+  
+  .nested-dropdown-content li {
+    padding: 20px;
+    list-style: none;
+  }
+  
+  /* Show dropdown on hover */
+  .dropdown:hover .dropdown-content {
+    display: block;
+  }
+  
+  /* Show nested dropdown on hover */
+  .nested-dropdown:hover .nested-dropdown-content {
+    display: block;
+  }
