--- a/css/gstregistration.css
+++ b/css/gstregistration.css
@@ -2,3 +2,11 @@
     margin: 0px;
     padding: 0px;
 }
+.container{
+    background-color:rgb(245 250 255);
+    height: 100vh;
+    width: 100%;
+}
+.content h2{
+    padding:60px 70px;
+}
