--- a/css/gstregistration.css
+++ b/css/gstregistration.css
@@ -20,13 +20,24 @@
 .content h2{
     padding-top: 70px;
     padding-left:190px;
-    
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     
 }
 .content p{
-    font-size: 20px;
-    margin-left: 190px;
+    font-size: 18px;
+    margin-left: 180px;
     padding: 10px;
+    font-family:Arial, Helvetica, sans-serif;
+}
+
+.input-box{
+    background-color: #e62525;
+    height: 55vh;
+    width: 30%;
+    float: right;
+    margin-right: 50px;
+    margin-top:-370px;
+    border-radius: 10px;
+    padding: 5px;
 
 }
