--- a/css/gstregistration.css
+++ b/css/gstregistration.css
@@ -29,9 +29,10 @@
     padding: 10px;
     font-family:Arial, Helvetica, sans-serif;
 }
+/*form */
 
 .input-box{
-    background-color: #e62525;
+    background-color: #fff;
     height: 55vh;
     width: 30%;
     float: right;
@@ -39,5 +40,53 @@
     margin-top:-370px;
     border-radius: 10px;
     padding: 5px;
+    box-shadow: 1px 1px 20px 1px rgb(129, 118, 118);
+
+}
+form h2{
+    font-family: Arial, Helvetica, sans-serif;
+    padding: 10px;
+    margin-top: 20px;
+    text-align: center;
+}
+.info{
+    margin: 15px;
+    margin-top: 10px;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+    font-size: 16px;
+    width: 80%;
+    height: 6vh;
+    border-radius: 5px;
+   
+}
+.input-box h5{
+text-align: center;
+font-size: 18px;
+padding: 10px;
+
+}
+.toggler{
+   
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    float: right;
+    text-align: center;
+    margin-top: -17px;
+    margin-right: 65px;
+    
+}
+button{
+    height: 7vh;
+    width: 80%;
+    background-color: rgb(255, 234, 8);
+    text-align: center;
+    font-size: 19px;
+    border-radius: 5px;
+    margin-left: 47px;
+    text-decoration: none;
+    border: none;
 
 }
