--- a/css/gstregistration.css
+++ b/css/gstregistration.css
@@ -265,7 +265,7 @@ button{
 .notice1{
     background-color:rgb(247 247 247);
     width: 70%;
-    height: 34vh;
+    height: 37vh;
     margin-left: auto;
     margin-right: auto;
     display: block;
@@ -274,6 +274,9 @@ button{
     padding: 10px;
     border-radius: 10px;
     
+}
+.notice1 h1{
+    margin: 15px;
 }
 .inner-notice{
     display: flex;
@@ -289,4 +292,33 @@ button{
     height: 25vh;
     width: auto;
     padding: 10px;
+}
+.notice2{
+    background-color:rgb(247 247 247);
+    width: 73%;
+    height: 72vh;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+    margin-top: 110px;
+    padding: 50px;
+    border-radius: 10px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+.img3{
+    float: right;
+}
+.notice2 h1{
+margin-left: 90px;
+margin-bottom: 20px;
+}
+.notice2 p{
+    font-size: 19px;
+    margin-left: 90px;
+margin-bottom: 25px;
+}
+.shell-list ul{
+    font-size: 19px;
+    margin-left: 90px;
+margin-bottom: 25px;
 }
