--- a/css/gstregistration.css
+++ b/css/gstregistration.css
@@ -296,7 +296,7 @@ button{
 .notice2{
     background-color:rgb(247 247 247);
     width: 73%;
-    height: 72vh;
+    height: 70vh;
     margin-left: auto;
     margin-right: auto;
     display: block;
@@ -307,6 +307,9 @@ button{
 }
 .img3{
     float: right;
+    margin-top: -450px;
+    height: auto;
+    width: 30%;
 }
 .notice2 h1{
 margin-left: 90px;
@@ -321,4 +324,92 @@ margin-bottom: 25px;
     font-size: 19px;
     margin-left: 90px;
 margin-bottom: 25px;
+}
+.shell-list ul li{
+   margin: 25px;
+}
+.outer-shell{
+    background-color:rgb(245 250 255) ;
+    width: 100%;
+    height:275vh;
+    margin-top: 100px;
+}
+.shell2{
+    text-align: center;
+    padding-top: 100px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+.shell2 p{
+    padding: 40px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 18px;
+}
+table{
+    
+    height: 80vh;
+    width: 60%;
+    background-color: #fff;
+    border-radius: 20px;
+    margin-left: auto;
+    margin-right: auto;
+    border-color: rgb(245, 237, 237);
+    box-shadow: 2px 2px 2px 2px rgb(65, 57, 59);
+    margin-top: 60px;
+    text-align: center;
+}
+.head{
+    text-align: center;
+    margin-top: 80px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+.head p{
+    margin: 40px;
+    font-size: 17px;
+}
+.table2{
+    height: 80vh;
+    width: 70%;
+    background-color: #fff;
+    border-radius: 20px;
+    margin-left: auto;
+    margin-right: auto;
+    border-color: rgb(245, 237, 237);
+    box-shadow: 2px 2px 2px 2px rgb(65, 57, 59);
+    margin-top: 60px; 
+    font-family: Arial, Helvetica, sans-serif;
+}
+.table2 th{
+    box-shadow: 1px 1px 1px 1px rgb(187, 184, 184);
+    padding: 10px;
+}
+.table2 td{
+    box-shadow: 1px 1px 1px 1px rgb(187, 184, 184);
+    padding: 10px;
+    text-align: center;
+}
+.note10{
+    display: flex;
+    background-color:rgb(230 242 255);
+    height: 10vh;
+    width: 78%;
+    text-align: center;
+    margin-left: 155px;
+    border-radius: 10px;
+    padding: 10px;
+    margin-top: 50px;
+    box-shadow: 0px 1px 1px 1px rgb(0, 153, 255);
+    
+}
+.note10 p{
+    
+    font-size: 18px;
+    font-family: Arial, Helvetica, sans-serif;
+    margin: 15px;
+    padding-top: 20px;
+    
+    
+}
+.inside{
+    text-align: center;
+    
 }
