--- a/css/gstregistration.css
+++ b/css/gstregistration.css
@@ -409,7 +409,37 @@ table{
     
     
 }
+.shell5{
+    display: flex;
+}
 .inside{
-    text-align: center;
     
+    height: 70vh;
+    width: 50%;
+    margin-top:70px;
+    margin-left: 60px;
+    padding: 40px;
+    font-family: Arial, Helvetica, sans-serif;
+    
+}
+.inside h1{
+    text-align: center;
+}
+.inside p{
+    margin: 40px;
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 18px;
+}
+ul li{
+ margin: 10px;
+ font-size: 19px;
+ margin-left: 70px;
+
+}
+.side-img{
+   float: right;
+   margin-top: 230px;
+   height: 50vh;
+   width: auto;
 }
