--- a/css/gstregistration.css
+++ b/css/gstregistration.css
@@ -1,6 +1,7 @@
 *{
     margin: 0px;
     padding: 0px;
+    font-family: Arial, Helvetica, sans-serif;
 }
 .floater{
     text-align: center;
@@ -14,7 +15,7 @@
 }
 .container{
     background-color:rgb(245 250 255);
-    height: 90vh;
+    height: 95vh;
     width: 100%;
 }
 .content h1{
@@ -86,6 +87,9 @@ button{
     text-align: center;
     font-size: 19px;
     border-radius: 5px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
     margin-left: 47px;
     text-decoration: none;
     border: none;
@@ -97,7 +101,7 @@ button{
 }
 .list ul{
     margin-top: 20px;
-    margin-left:230px;
+    margin-left:180px;
     font-family:Arial, Helvetica, sans-serif ;
 }
 .container a{
@@ -405,7 +409,7 @@ table{
     font-size: 18px;
     font-family: Arial, Helvetica, sans-serif;
     margin: 15px;
-    padding-top: 20px;
+    padding-top: 10px;
     
     
 }
@@ -504,10 +508,123 @@ ul li{
 margin-top: 80px;
 font-family: Arial, Helvetica, sans-serif;
 margin-left: 150px;
+margin-right: 150px;
 
 
 }
 .q-A p{
     font-size: 18px;
     padding: 15px;
+    text-align: justify;
+    color: rgb(75, 74, 74);
 }
+.note11{
+    display: flex;
+    background-color:#fff;
+    height: 10vh;
+    width: 78%;
+    text-align: center;
+    margin-left: 155px;
+    border-radius: 10px;
+    padding: 10px;
+    margin-top: 50px;
+    box-shadow: 1px 1px 1px 1px rgb(0, 153, 255);
+    
+}
+.note11 p{
+    
+    font-size: 18px;
+    font-family: Arial, Helvetica, sans-serif;
+    margin: 15px;
+    padding-top: 20px;
+}
+.new{
+    margin-top: 40px;
+    height: 300vh;
+    width: 97.3%;
+    background-color:rgb(250 250 250);
+    padding: 20px;
+    font-family: Arial, Helvetica, sans-serif;
+
+}
+.new img {
+    float: right;
+    margin-right:40px ;
+    margin-top: -300px;
+    height: 40vh;
+    width: auto;
+}
+.new-section h1{
+    text-align: center;
+    margin: 30px;
+}
+.new-section p{
+    text-align: center;
+    font-size: 18px;
+    color: rgb(53, 51, 51);
+}
+.ul-points{
+    height: 37vh;
+    width: 50%;
+    margin-left: 100px;
+    padding: 20px;
+    text-align: justify;
+    color: rgb(53, 51, 51);
+}
+.point{
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+    margin-top: 90px;
+}
+.upper-heading{
+    text-align: center;
+    padding: 20px;
+    font-size: 18px;
+}
+.card-container1{
+    display: flex;
+    justify-content: space-around;
+    margin: 40px 90px;
+}
+.white-card{
+    width: 40%;
+    height: 30vh;
+    background-color: #fff;
+    border-radius: 15px;
+    padding: 15px;
+    box-shadow: 2px 2px 3px 2px rgb(232, 232, 215);
+    box-sizing: border-box;
+    
+}
+.white-card h2{
+    margin: 20px;
+}
+.white-card p{
+    margin: 20px;
+    text-align: justify;
+    font-size: 17px;
+}
+.types-section h1{
+    text-align: center;
+    padding: 50px;
+}
+.types-section p{
+    text-align: center;
+   
+   margin-left: auto;
+   margin-right: auto;
+   display: block;
+   padding: 0px 180px;
+   font-size: 19px;
+}
+.background{
+margin: 50px;
+ background-color: #fff;
+ height: 40vh;
+ width: 85%;
+ padding: 15px;
+ margin-right: auto;
+ margin-left:auto ;
+ font-size: 18px;
+}
+.ba
