--- a/css/gstregistration.css
+++ b/css/gstregistration.css
@@ -540,14 +540,14 @@ margin-right: 150px;
 }
 .new{
     margin-top: 40px;
-    height: 300vh;
+    height: 500vh;
     width: 97.3%;
     background-color:rgb(250 250 250);
     padding: 20px;
     font-family: Arial, Helvetica, sans-serif;
 
 }
-.new img {
+.new .img99 {
     float: right;
     margin-right:40px ;
     margin-top: -300px;
@@ -610,7 +610,7 @@ margin-right: 150px;
 }
 .types-section p{
     text-align: center;
-   
+
    margin-left: auto;
    margin-right: auto;
    display: block;
@@ -620,11 +620,117 @@ margin-right: 150px;
 .background{
 margin: 50px;
  background-color: #fff;
- height: 40vh;
+ height: 55vh;
  width: 85%;
  padding: 15px;
  margin-right: auto;
  margin-left:auto ;
  font-size: 18px;
+ border-radius: 15px;
+ 
 }
-.ba
+.format-img{
+    float: right;
+margin-top: -260px;
+}
+.gst-no-format h1{
+    margin-top: 15px;
+}
+.gst-no-format p{
+    margin-top: 15px;
+}
+ul{
+    margin-top: 25px;
+}
+ul li{
+    margin: 10px;
+}
+.container-new{
+    height: 30vh;
+    width:80% ;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: rgb(230 242 255);
+    padding: 10px;
+    border-radius: 15px;
+    margin-top:70px ;
+   
+}
+.flex{
+    display: flex;
+}
+
+.container-new h1{
+margin: 20px;
+}
+.container-new p{
+font-size: 18px;
+margin: 20px;
+color: rgb(59, 56, 56);
+}
+.img100{
+ height: 10vh;
+ width: auto;
+ margin-top: -168px;
+ float: right;
+
+}
+.container100{
+    background-color:  rgb(249 249 249);
+    margin: 100px;
+    height: 40vh;
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 15px;
+    padding: 25px;
+    box-shadow: 1px 2px 2px 1px #828080;
+}
+.container100 h1{
+    text-align: center;
+    margin: 15px;
+  
+}
+.container100 p{
+    float: right;
+    font-size: 18px;
+    text-align: justify;
+   
+}
+.content100{
+    margin-top: -250px;
+}
+.container50{
+    height: 95vh;
+    width: 80%;
+    background-color: rgb(230 242 255);
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 15px;
+    padding: 20px;
+}
+.img50{
+    float: right;
+    margin-top: -265px;
+}
+.inner-content50-1 p{
+    margin: 10px;
+    font-size: 17px;
+}
+.inner-content50-2 h1{
+    text-align: center;
+    margin: 40px;
+}
+.p{
+    float: right;
+    margin-top: -250px;
+}
+.p p{
+    font-size: 19px;
+}
+.img501{
+    height: 33vh;
+    width: auto;
+    margin: 5px;
+}
+
