--- a/css/gstregistration.css
+++ b/css/gstregistration.css
@@ -76,8 +76,8 @@ padding: 10px;
     transform: translate(-50%, -50%);
     float: right;
     text-align: center;
-    margin-top: -17px;
-    margin-right: 65px;
+    margin-top: -18px;
+    margin-right: 45px;
     
 }
 button{
@@ -540,7 +540,7 @@ margin-right: 150px;
 }
 .new{
     margin-top: 40px;
-    height: 500vh;
+    height: 565vh;
     width: 97.3%;
     background-color:rgb(250 250 250);
     padding: 20px;
@@ -734,3 +734,98 @@ color: rgb(59, 56, 56);
     margin: 5px;
 }
 
+.container33{
+    height: 50h;
+    width: 80%;
+    background-color: rgb(249 249 249) ;
+    border-radius: 15px;
+    margin-left: auto;
+    margin-right: auto;
+   margin-top: 100px;
+   padding: 15px;
+   box-shadow: 1px 2px 2px 1px #828080;
+   
+}
+.content33{
+    display: flex;
+}
+.p33{
+    padding: 30px;
+}
+.p33 h1{
+    margin: 10px;
+}
+.p33 p{
+    font-size: 18px;
+}
+.img33{
+    margin:70px 0px;
+}
+.container34{
+    height: 150vh;
+    width: 100%;
+    margin-top: 120px;
+    background-color: rgb(255 245 245);
+}
+.box34-container{
+    display: flex;
+    justify-content: space-around;
+
+}
+.box34-1{
+    height: 25vh;
+    width: 31%;
+    background-color: #fff;
+    border-radius: 15px;
+    margin: 20px;
+    padding: 10px;
+    margin-left: 150px;
+}
+.box34-1 h2{
+    margin: 10px;
+
+}
+.box34-1 p{
+    color: #474444;
+    font-size: 17px;
+}
+.container34 h1{
+    padding: 40px 0px;
+   
+    text-align: center;
+}
+.box34-2{
+    height: 25vh;
+    width: 31%;
+    background-color: #fff;
+    border-radius: 10px;
+    margin: 20px;
+    padding: 10px;
+    margin-right: 150px;
+}
+.box34-2 h2{
+    margin: 10px;
+
+}
+.box34-2 p{
+    color: #474444;
+    font-size: 17px;
+}
+.box34-3{
+    height: 25vh;
+    width: 31%;
+    background-color: #fff;
+    border-radius: 10px;
+    margin: 20px;
+    padding: 10px;
+    margin-left: auto;
+    margin-right: auto;
+}
+.box34-3 h2{
+    margin: 10px;
+
+}
+.box34-3 p{
+    color: #474444;
+    font-size: 17px;
+}
