--- a/css/GSTfilling.css
+++ b/css/GSTfilling.css
@@ -15,13 +15,15 @@
 }
 .container{
     background-color:rgb(245 250 255);
-    height: 95vh;
+    height: 80vh;
     width: 100%;
 }
 .content h1{
     padding-top: 70px;
     padding-left:160px;
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 40px;
+    margin-bottom: 20px;
     
 }
 .content p{
@@ -38,7 +40,7 @@
     width: 30%;
     float: right;
     margin-right: 80px;
-    margin-top:-370px;
+    margin-top:-150px;
     border-radius: 10px;
     padding: 5px;
     box-shadow: 1px 1px 20px 1px rgb(129, 118, 118);
@@ -108,4 +110,77 @@ button{
     margin-top:10px;
     padding-left: 200px;
     font-size: 17px;
+}
+.container101{
+    width: 100%;
+    height: 100vh;
+}
+.container101 h1{
+    text-align: center;
+    margin: 20px;
+}
+.innercontainer101{
+    display: flex;
+    justify-content: center;
+}
+.paras{
+    height: 50vh;
+    width: 45%;
+    color: rgb(76, 75, 75);
+    font-size: 19px;
+    padding: 5px;
+    justify-content: center;
+    margin: 10px;
+}
+.img1{
+    height: 38vh;
+    width: auto;
+    margin: 10px;
+}
+.innercontainer102{
+    height: 90vh;
+    width: 82%;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 15px;
+}
+.inner-box-container102{
+    display: flex;
+    justify-content: space-around;
+    
+}
+.box1{
+    height: 40vh;
+    width: 30%;
+    background-color: aqua;
+    border-radius: 5px;
+    text-align: center;
+    padding: 5px;
+    margin: 20px;
+    justify-content: center;
+}
+.inner-box-container102-1{
+    display: flex;
+    justify-content: center;
+    
+}
+.box2{
+    height: 40vh;
+    width: 30%;
+    background-color: aqua;
+    border-radius: 5px;
+    text-align: center;
+    padding: 5px;
+    margin: 20px;
+    justify-content: center;
+}
+.container102 p{
+    text-align: center;
+    font-size: 18px;
+}
+.box1 h2{
+    margin: 3px;
+}
+.box2 h2{
+    margin: 7px;
 }
