--- a/css/GSTfilling.css
+++ b/css/GSTfilling.css
@@ -299,3 +299,20 @@ button{
 .space{
     margin:20px ;
 }
+table{
+    margin-left: auto;
+    margin-right: auto;
+    color: #000;
+}
+.table-container h1{
+    margin-top: 140px;
+}
+.table-container p{
+text-align: center;
+margin: 35px;
+font-size: 19px;
+}
+table th{
+    padding: 25px 70px;
+    
+}
